--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Minor factions Milty draft tool</h1>
-    <h4>click "genetate" to get slices string and add them in miltydraft advanced settings</h4>
+    <h4>click "generate" to get slices string and add them in miltydraft advanced settings</h4>
     <form>
         <label>how many factions</label><input type="number" value="9" id="factions"><br>
         <label>how many slices</label><input type="number" value="7" id="slices"><br>
